--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>fuck you!</title>
-     <link rel="stylesheet" href="css/style.css">
+     <link rel="stylesheet" href="./output.css">
 </head>
 <body>
      
