finish the responsive

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,99 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>fuck you!</title>
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
      <link rel="stylesheet" href="./output.css">
+     <link rel="stylesheet" href="./input.css">
+     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+     <!-- swiper -->
+
+     <section class="max-w-[1400px] bg-gray-300 mx-auto flex items-center">
+
+          <div class="w-full h-screen bg-gray-400 grid grid-cols-12 justify-center gap-5 p-5">
+
+               <div class="lg:col-span-8 col-span-12 rounded-lg overflow-hidden shadow-lg">
+
+                    <div class="swiper mySwiper w-full h-full object-cover bg-cover">
+                         <div class="swiper-wrapper">
+                              <div class="swiper-slide">
+                                   <img src="https://www.banimode.com/img/cms/030511/1722497378.jpg" class="w-full h-full object-cover bg-cover">
+                              </div>
+                              <div class="swiper-slide">
+                                   <img src="https://www.banimode.com/img/cms/030507/1722151426.jpg" class="w-full h-full object-cover bg-cover">
+                              </div>
+                         </div>
+                         <div class="swiper-pagination"></div>
+                    </div>
+
+               </div>
+
+               <div class="lg:col-span-4 col-span-6  rounded-lg overflow-hidden shadow-lg">
+
+                    <div class="swiper mySwiper w-full h-full object-cover bg-cover">
+                         <div class="swiper-wrapper">
+                              <div class="swiper-slide">
+                                   <img src="https://www.banimode.com/img/cms/030509/1722324582.png" class="w-full h-full object-cover bg-cover">
+                              </div>
+                              <div class="swiper-slide">
+                                   <img src="https://www.banimode.com/img/cms/030506/1722065911.jpg" class="w-full h-full object-cover bg-cover">
+                              </div>
+                         </div>
+                         <div class="swiper-pagination"></div>
+                    </div>
+
+               </div>
+
+               <div class="lg:col-span-4 col-span-6  rounded-lg overflow-hidden shadow-lg">
+
+                    <div class="swiper mySwiper w-full h-full object-cover bg-cover">
+                         <div class="swiper-wrapper">
+                              <div class="swiper-slide">
+                                   <img src="https://www.banimode.com/img/cms/030503/1721800835.jpg" class="w-full h-full object-cover bg-cover">
+                              </div>
+                              <div class="swiper-slide">
+                                   <img src="https://www.banimode.com/img/cms/030508/1722263821.png" class="w-full h-full object-cover bg-cover">
+                              </div>
+                              <div class="swiper-slide">
+                                   <img src="https://www.banimode.com/img/cms/030510/1722416499.png" class="w-full h-full object-cover bg-cover">
+                              </div>
+                              <div class="swiper-slide">
+                                   <img src="https://www.banimode.com/img/cms/030508/1722239050.jpg" class="w-full h-full object-cover bg-cover">
+                              </div>
+                         </div>
+                         <div class="swiper-pagination"></div>
+                    </div>
+
+               </div>
+
+               <div class="lg:col-span-8 col-span-12 rounded-lg overflow-hidden shadow-lg">
+                    
+                    <div class="swiper mySwiper w-full h-full object-cover bg-cover">
+                         <div class="swiper-wrapper">
+                              <div class="swiper-slide">
+                                   <img src="https://www.banimode.com/img/cms/030508/1722239133.jpg" class="w-full h-full object-cover bg-cover">
+                              </div>
+                              <div class="swiper-slide">
+                                   <img src="https://www.banimode.com/img/cms/030509/1722325370.jpg" class="w-full h-full object-cover bg-cover">
+                              </div>
+                              <div class="swiper-slide">
+                                   <img src="https://www.banimode.com/img/cms/030508/1722239133.jpg" class="w-full h-full object-cover bg-cover">
+                              </div>
+                         </div>
+                         <div class="swiper-pagination"></div>
+                    </div>
+
+               </div>
+
+          </div>
+     </section>
+
+
+
+     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+     <script src="./script.js"></script>
      
 </body>
 </html>
