--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
      <section class="max-w-[1400px] bg-gray-300 mx-auto flex items-center">
 
-          <div class="w-full h-screen bg-gray-400 grid grid-cols-12 justify-center gap-5 p-5">
+          <div class="w-full bg-gray-400 grid grid-cols-12 justify-center gap-5 p-3">
 
                <div class="lg:col-span-8 col-span-12 rounded-lg overflow-hidden shadow-lg">
 
