com index to root of folder

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title></title>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-     <link rel="stylesheet" href="./output.css">
-     <link rel="stylesheet" href="./input.css">
-     <link rel="stylesheet" href="./style.css">
+     <link rel="stylesheet" href="./src/output.css">
+     <link rel="stylesheet" href="./src/input.css">
+     <link rel="stylesheet" href="./src/style.css">
      <link
      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
      rel="stylesheet"
@@ -155,8 +155,7 @@
 
 
      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-     <script src="./script.js"></script>
-     <script src="./../app.js"></script>
+     <script src="./src/script.js"></script>
      
 </body>
 </html>
