--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <style>
         @font-face {
              font-family: 'myFirstFont';
-             src: url(./../font/Vazir-Medium.ttf);
+             src: url(./font/Vazir-Medium.ttf);
         }
      </style>
 
