--- a/src/index.html
+++ b/src/index.html
@@ -21,18 +21,21 @@
      </style>
 
 </head>
-<body  style="font-family: myFirstFont;">
+
+<body  style="font-family: myFirstFont; padding: 0; margin: 0; box-sizing: border-box;">
 
       <!-- ***************************** GIF **************************** -->
 
-      <div class="hidden md:block">
-          <a href="#" class="cursor-pointer"><img class="w-full h-[60px] object-cover" src="	https://www.banimode.com/img/cms/030507/1722179219.gif" alt=""></a>
+     <div class="hidden md:block">
+          <a href="#" class="cursor-pointer"><img class="w-full h-[60px] object-cover" src="https://www.banimode.com/img/cms/030507/1722179219.gif" alt=""></a>
      </div>
      
      <!-- **************************** HEADER ****************************** -->
 
-     <section class="w-full p-6 ">  
-          <div class="w-full md:max-w-[1250px] m-auto p-4 flex items-center justify-between ">
+     <section class="w-full p-4">  
+
+          <div class="w-full max-w-[1250px] m-auto p-4 flex items-center justify-between ">
+               
                <div class="md:w-1/3 flex sm:opacity-100 ">
                     <img class="cursor-pointer w-0 lg:w-[40px]" src="../img/cart-new.svg" alt="">
                     <img class="md:h-8 md:inline-block hidden mt-2 cursor-pointer lg:w-0" width="30" height="30" src="https://img.icons8.com/ios-glyphs/60/000000/search--v1.png" alt="search--v1"/>
@@ -67,12 +70,12 @@
                     <li class="hover:border-2 border-green-500 rounded-xl hover:p-3 hover:shadow-lg  duration-150">بانی مگ</li>
                </ul>
           </div>
-
+     </section>
 
 
      <!-- swiper -->
 
-     <section class="max-w-[1250px]  mx-auto flex items-center">
+     <section class="max-w-[1250px] w-full  mx-auto flex items-center justify-center">
 
           <div class="w-full grid grid-cols-12 justify-center gap-5 p-3">
 
@@ -150,6 +153,7 @@
                </div>
 
           </div>
+
      </section>
 
 
