--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               </div>
          </div>
 
-         <ul class="md:flex md:items-center gap-x-4 gap-y-6 md:h-[80px] z-[1000] md:z-auto absolute md:static bg-blue-200 w-full md:w-auto 
+         <ul class="md:flex md:items-center gap-x-4 gap-y-6 md:h-[80px] z-[1000] md:z-auto absolute md:static bg-white w-full md:w-auto 
                     py-6 md:py-0 pr-6  opacity-0 md:opacity-100  top-[-400] transition-all ease-in duration-300  ">
               <li class="flex  hover:border-b-2 border-green-500  duration-150"><img class="w-6 h-6 ml-4 hidden md:block" width="50" height="50" src="https://img.icons8.com/ios/50/menu--v1.png" alt="menu--v1"/>دسته بندی کالاها</li>
               <li class="hover:border-2 border-green-500 rounded-xl hover:p-3 hover:shadow-lg  duration-150">شگفت انگیز</li>
