Repair the phone screen move

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="fa" dir="rtl">
 <head>
      <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=2.0, maximum-scale=1.0, user-scalable=no, viewport-fit=contain">
      <title></title>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
      <link rel="stylesheet" href="./src/output.css">
@@ -22,7 +22,7 @@
 
 </head>
 
-<body  style="font-family: myFirstFont; overflow-x: hidden;">
+<body  style="font-family: myFirstFont; overflow-x: hidden; -webkit-font-smoothing: antialiased;">
 
      <!-- ***************************** GIF **************************** -->
 
@@ -71,7 +71,7 @@
 
     <!-- swiper -->
 
-    <section class="md:max-w-[1250px] w-full  m-auto flex items-center ">
+    <section class="md:max-w-[1250px] w-full  m-auto flex items-center overflow-x-hidden">
 
          <div class="w-full grid grid-cols-12 justify-center gap-5 p-3">
 
