responsive Categrory section complete

--- a/src/index.html
+++ b/src/index.html
@@ -153,39 +153,27 @@
 
     <!-- Category -->
 
-    <section class="w-full md:max-w-[1250px] h-auto md:h-[40vh] p-6 mt-4 m-auto ">
-     <div class="flex flex-wrap md:flex-nowrap gap-x-6">
-          <div class="w-[550px]">
-               <a href="#">
-                    <img class="w-[95%] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[100%]" src="./../img/t-shirt.png" alt="">
-               </a>
+    <section class="w-full md:max-w-[1250px] h-auto p-2 mt-4 m-auto ">
+        <div class="flex flex-wrap justify-around gap-2 h-full">
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/t-shirt.png" alt="">
           </div>
-          <div class="">
-               <a href="#">
-                    <img class="w-[95%] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[100%]" src="./../img/pants.png" alt="">
-               </a>
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/pants.png" alt="">
           </div>
-          <div class="">
-               <a href="#">
-                    <img class="w-[550px] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[580px]" src="./../img/watch.jpg" alt="">
-               </a>
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/atr.jpg" alt="">
           </div>
-          <div class="">
-               <a href="#">
-                    <img class="w-[550px] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[580px]" src="./../img/sofa.jpg" alt="">
-               </a>
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/sofa.jpg" alt="">
           </div>
-          <div class="">
-               <a href="#">
-                    <img class="w-[95%] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[100%]" src="./../img/atr.jpg" alt="">
-               </a>
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/gift.jpg" alt="">
           </div>
-          <div class="">
-               <a href="#">
-                    <img class="w-[95%] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[100%]" src="./../img/gift.jpg" alt="">
-               </a>        
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/watch.jpg" alt="">
           </div>
-     </div>
+        </div>
 
     </section>
 
