--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=2.0, maximum-scale=1.0, user-scalable=no, viewport-fit=contain">
      <title></title>
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
      <link rel="stylesheet" href="./output.css">
      <link rel="stylesheet" href="./input.css">
      <link rel="stylesheet" href="./style.css">
@@ -22,7 +23,7 @@
 
 </head>
 
-<body  style="font-family: myFirstFont; overflow-x: hidden; -webkit-font-smoothing: antialiased;">
+<body  style="font-family: myFirstFont; overflow-x: hidden; -webkit-font-smoothing: antialiased; padding-bottom: 100px;">
 
      <!-- ***************************** GIF **************************** -->
 
@@ -58,8 +59,8 @@
               </div>
          </div>
 
-         <ul class="md:flex md:items-center gap-x-4 gap-y-6 md:h-[80px] z-[1000] md:z-auto absolute md:static bg-white w-full md:w-auto 
-                    py-6 md:py-0 pr-6  opacity-0 md:opacity-100  top-[-400] transition-all ease-in duration-300  ">
+         <ul class="md:flex md:items-center gap-x-4 gap-y-6 md:h-[80px] z-[1000] md:z-auto absolute md:static bg-white w-full md:w-[1250px] m-auto
+                    py-6 md:py-0 pr-6  opacity-0 md:opacity-100  top-[-400] transition-all ease-in duration-300">
               <li class="flex  hover:border-b-2 border-green-500  duration-150"><img class="w-6 h-6 ml-4 hidden md:block" width="50" height="50" src="https://img.icons8.com/ios/50/menu--v1.png" alt="menu--v1"/>دسته بندی کالاها</li>
               <li class="hover:border-2 border-green-500 rounded-xl hover:p-3 hover:shadow-lg  duration-150">شگفت انگیز</li>
               <li class="hover:border-2 border-green-500 rounded-xl hover:p-3 hover:shadow-lg  duration-150">اوتلت</li>
@@ -67,6 +68,7 @@
               <li class="hover:border-2 border-green-500 rounded-xl hover:p-3 hover:shadow-lg  duration-150">کارت هدیه</li>
               <li class="hover:border-2 border-green-500 rounded-xl hover:p-3 hover:shadow-lg  duration-150">بانی مگ</li>  
          </ul>
+     </section>
 
 
     <!-- swiper -->
@@ -153,40 +155,141 @@
 
     <!-- Category -->
 
-    <section class="w-full md:max-w-[1250px] h-auto md:h-[40vh] p-6 mt-4 m-auto ">
-     <div class="flex flex-wrap md:flex-nowrap gap-x-6">
-          <div class="w-[550px]">
-               <a href="#">
-                    <img class="w-[95%] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[100%]" src="./../img/t-shirt.png" alt="">
-               </a>
+    <section class="w-full md:max-w-[1250px] h-auto p-2 mt-4 m-auto ">
+        <div class="flex flex-wrap justify-around gap-2 h-full">
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/t-shirt.png" alt="">
           </div>
-          <div class="">
-               <a href="#">
-                    <img class="w-[95%] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[100%]" src="./../img/pants.png" alt="">
-               </a>
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/pants.png" alt="">
           </div>
-          <div class="">
-               <a href="#">
-                    <img class="w-[550px] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[580px]" src="./../img/watch.jpg" alt="">
-               </a>
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/atr.jpg" alt="">
           </div>
-          <div class="">
-               <a href="#">
-                    <img class="w-[550px] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[580px]" src="./../img/sofa.jpg" alt="">
-               </a>
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/sofa.jpg" alt="">
           </div>
-          <div class="">
-               <a href="#">
-                    <img class="w-[95%] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[100%]" src="./../img/atr.jpg" alt="">
-               </a>
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/gift.jpg" alt="">
           </div>
-          <div class="">
-               <a href="#">
-                    <img class="w-[95%] m-auto rounded-xl hover:shadow-2xl hover:duration-200 hover:w-[100%]" src="./../img/gift.jpg" alt="">
-               </a>        
+          <div class="w-[130px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
+               <img src="../img/watch.jpg" alt="">
+          </div>
+        </div>
+
+    </section>
+
+    <!-- wonder -->
+
+    <section class="md:max-w-[1250px] w-full h-[800px] m-auto p-8 shadow-md rounded-lg">
+
+     <div class="flex justify-between">
+          <div class="flex justify-between items-center gap-x-3 ">
+               <img class="w-52 md:w-64" src="https://www.banimode.com/img/cms/020911/1701506842.png">
+          </div>
+          <div class="flex items-center justify-evenly gap-x-1 md:gap-x-3">
+               <div class="bg-orange-500 p-3 rounded-lg">00</div>:
+               <div class="bg-orange-500 p-3 rounded-lg">00</div>:
+               <div class="bg-orange-500 p-3 rounded-lg">00</div> 
           </div>
      </div>
 
+     <div class="w-full mt-7" id="ctn">
+
+          <div #swiperRef="" class="swiper ndSwiper pt-10 rounded-md px-10">
+
+               <div class="swiper-wrapper pb-5">
+
+                    <div class="swiper-slide">
+                         <div class="relative ">
+                              <img src="../img/second-swiper-3.jpg" class="rounded-xl">
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                              <p>Arsenal</p>
+                              <p class="line-through">2.500.000 t</p>
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+                         </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                         <div class="relative ">
+                              <img src="../img/second-swiper-1.jpg" class="rounded-xl">
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                              <p>Atlas</p>
+                              <p class="line-through">2.500.000 t</p>
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+                         </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                         <div class="relative ">
+                              <img src="../img/second-swiper-4.jpg" class="rounded-xl">
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                              <p>Hades</p>
+                              <p class="line-through">2.500.000 t</p>
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+                         </div>
+                    </div>
+                    
+                    <div class="swiper-slide">
+                         <div class="relative ">
+                              <img src="../img/second-swiper-2.jpg" class="rounded-xl">
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                              <p>Zeus</p>
+                              <p class="line-through">2.500.000 t</p>
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+                         </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                         <div class="relative ">
+                              <img src="../img/second-swiper-5.jpg" class="rounded-xl">
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                              <p>Thor</p>
+                              <p class="line-through">2.500.000 t</p>
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+                         </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                         <div class="relative ">
+                              <img src="../img/second-swiper-6.jpg" class="rounded-xl">
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                              <p>Loki</p>
+                              <p class="line-through">2.500.000 t</p>
+                         </div>
+                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                              <p class="text-gray-500">تی شرت</p>
+                              <p class="text-green-600">2.000.000 t</p>
+                         </div>
+                    </div>
+
+               </div>
+
+          </div>
+
+     </div>
+     
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
