--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="w-full p-6 ">  
          <div class="w-full md:max-w-[1250px] m-auto p-4 flex items-center justify-between ">
               <div class="md:w-1/3 flex sm:opacity-100 ">
-                   <img class="cursor-pointer w-0 lg:w-[40px]" src="./../img/cart-new.svg" alt="">
+                   <img class="cursor-pointer w-0 lg:w-[40px]" src="./img/cart-new.svg" alt="">
                    <img class="md:h-8 md:inline-block hidden mt-2 cursor-pointer lg:w-0" width="30" height="30" src="https://img.icons8.com/ios-glyphs/60/000000/search--v1.png" alt="search--v1"/>
                    <span class="block cursor-pointer md:hidden font-bold text-2xl menu"  id="toggle-btn" >
                         <img id="menu" class="w-5 sm:w-8 cursor-pointer md:hidden " width="30" height="30" src="https://img.icons8.com/ios-filled/50/menu--v1.png" alt="menu--v1"/>                               
@@ -204,7 +204,7 @@
 
                     <div class="swiper-slide ">
                          <div class="relative ">
-                              <img src="../img/second-swiper-3.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="./img/second-swiper-3.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
                          </div>
                          <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
                               <p>Arsenal</p>
@@ -218,7 +218,7 @@
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="../img/second-swiper-1.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="./img/second-swiper-1.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
                          </div>
                          <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
                               <p>Atlas</p>
@@ -232,7 +232,7 @@
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="../img/second-swiper-4.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="./img/second-swiper-4.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
                          </div>
                          <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
                               <p>Hades</p>
@@ -246,7 +246,7 @@
                     
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="../img/second-swiper-2.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="./img/second-swiper-2.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
                          </div>
                          <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
                               <p>Zeus</p>
@@ -260,7 +260,7 @@
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="../img/second-swiper-5.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="./img/second-swiper-5.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
                          </div>
                          <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
                               <p>Thor</p>
@@ -274,7 +274,7 @@
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="../img/second-swiper-6.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
+                              <img src="./img/second-swiper-6.jpg" class="rounded-xl h-[300px] md:h-[350px] lg:h-[400px]">
                          </div>
                          <div class="flex items-center justify-between mt-5 px-5 md:text-xl">
                               <p>Loki</p>
