update index root file

--- a/src/index.html
+++ b/src/index.html
@@ -297,11 +297,11 @@
     <!-- feature -->
 
     <section class="w-full md:max-w-[1250px] m-auto  mt-[350px]">
-     <div class="w-full p-4 flex flex-wrap justify-evenly gap-y-8">
+     <div class="w-full p-4 flex flex-nowrap md:flex-wrap justify-evenly gap-y-8">
           <div class="md:w-[300px] md:h-[230px]">
                <div class="md:bg-[url('https://www.banimode.com/themes/new/assets/images/footer/featurebg.png')] bg-none bg-center bg-contain relative bg-no-repeat h-full text-center  after:content-[' '] after:bg-white after:absolute after:w-full after:top-[30px] after:h-[200px] after:opacity-[90%] after:hover:opacity-[70%] after:z-0 after:block after:duration-500" >
                     <div class="w-full h-[70px] md:h-[100px] absolute top-[-50px] z-20 ">
-                         <img src="https://www.banimode.com/img/cms/000719/1633949580.jpg" class="m-auto h-full" alt="">
+                         <img src="https://www.banimode.com/img/cms/000719/1633949580.jpg" class="m-auto h-[80%] md:h-full" alt="">
                     </div>
      
                     <h3 class="relative pt-[30px] md:pt-[70px] text-[10px] md:text-xl font-semibold text-gray-600 z-30">ارسال سریع و رایگان</h3>
@@ -312,7 +312,7 @@
           <div class="w-[100px] h-[100px] md:w-[300px] md:h-[230px]">
                <div class="md:bg-[url('https://www.banimode.com/themes/new/assets/images/footer/featurebg.png')] bg-none bg-center bg-contain relative bg-no-repeat h-full text-center after:content-[' '] after:bg-white after:absolute after:w-full after:top-[30px] after:h-[200px] after:opacity-[90%] after:hover:opacity-[70%] after:z-0 after:block after:duration-500">
                     <div class="w-full h-[70px] md:h-[100px] absolute top-[-50px] z-20">
-                         <img src="https://www.banimode.com/img/cms/000719/1633949551.jpg" class="m-auto h-full" alt="">
+                         <img src="https://www.banimode.com/img/cms/000719/1633949551.jpg" class="m-auto h-[80%] md:h-full" alt="">
                     </div>
                     <h3 class="relative z-30 pt-[30px] md:pt-[70px] text-[10px] md:text-xl font-semibold text-gray-600 ">ضمانت اصالت</h3>
                     <p class="relative z-30 text-gray-500 text-sm mx-6 mt-3 text-center hidden md:block">تمامی کالاها اورجینال و با ضمانت اصل بودن از نمایندگی معتبر تهیه و ارائه می‌شوند.</p>
@@ -322,7 +322,7 @@
           <div class="w-[100px] h-[100px] md:w-[300px] md:h-[230px]">
                <div class="md:bg-[url('https://www.banimode.com/themes/new/assets/images/footer/featurebg.png')] bg-none bg-center bg-contain relative bg-no-repeat h-full text-center after:content-[' '] after:bg-white after:absolute after:w-full after:top-[30px] after:h-[200px] after:opacity-[90%] after:hover:opacity-[70%] after:z-0 after:block after:duration-500">
                     <div class="w-full h-[70px] md:h-[100px] absolute top-[-50px] z-20">
-                         <img src="https://www.banimode.com/img/cms/011130/1676813129.png" class="m-auto h-full" alt="">
+                         <img src="https://www.banimode.com/img/cms/011130/1676813129.png" class="m-auto h-[80%] md:h-full" alt="">
                     </div>
                     <h3 class="relative z-30 pt-[30px] md:pt-[70px] text-[10px] md:text-xl font-semibold text-gray-600">ضمانت بازگشت کالا</h3>
                     <p class="relative z-30 text-gray-500 text-sm mx-6 mt-3 text-center hidden md:block">تا ۷ روز برای احترام به انتخاب مشتریان کالای خریداری شده برگردانده می‌شود.       </p>
@@ -332,7 +332,7 @@
           <div class="w-[100px] h-[100px] md:w-[300px] md:h-[230px]">
                <div class="md:bg-[url('https://www.banimode.com/themes/new/assets/images/footer/featurebg.png')] bg-none bg-center bg-contain relative bg-no-repeat h-full text-center after:content-[' '] after:bg-white after:absolute after:w-full after:top-[30px] after:h-[200px] after:opacity-[90%] after:hover:opacity-[70%] after:z-0 after:block after:duration-500" >
                     <div class="w-full h-[70px] md:h-[100px] absolute top-[-50px] z-20">
-                         <img src="https://www.banimode.com/img/cms/000719/1633949430.jpg" class="m-auto h-full" alt="">
+                         <img src="https://www.banimode.com/img/cms/000719/1633949430.jpg" class="m-auto h-[80%] md:h-full" alt="">
                     </div>
                     <h3 class="relative z-30 pt-[30px] md:pt-[70px] text-[10px] md:text-xl font-semibold text-gray-600">خدمات پس از خرید</h3>
                     <p class="relative z-30 text-gray-500 text-sm mx-6 mt-3 text-center hidden md:block">میزبان صدای گرمتان هستیم. هدف تیم پشتیبانی بانی مد تلاش با تمام قوا برای ارائه بهترین خدمات به مشتریان عزیز می باشد.</p>
