update index root file

--- a/index.html
+++ b/index.html
@@ -158,22 +158,22 @@
     <section class="w-full md:max-w-[1250px] h-auto p-2 my-10 m-auto ">
         <div class="flex flex-wrap justify-around gap-2 h-full">
           <div class="w-[130px] h-[150px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/t-shirt.png" alt="">
+               <img src="./img/t-shirt.png" alt="">
           </div>
           <div class="w-[130px] h-[150px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/pants.png" alt="">
+               <img src="./img/pants.png" alt="">
           </div>
           <div class="w-[130px] h-[150px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/atr.jpg" alt="">
+               <img src="./img/atr.jpg" alt="">
           </div>
           <div class="w-[130px] h-[150px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/sofa.jpg" alt="">
+               <img src="./img/sofa.jpg" alt="">
           </div>
           <div class="w-[130px] h-[150px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/gift.jpg" alt="">
+               <img src="./img/gift.jpg" alt="">
           </div>
           <div class="w-[130px] h-[150px] md:w-[180px] md:h-[200px] rounded-xl duration-200 md:hover:shadow-xl md:hover:border md:hover:w-[190px]">
-               <img src="../img/watch.jpg" alt="">
+               <img src="./img/watch.jpg" alt="">
 
           </div>
         </div>
