fix wonder (daniel)

--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
 
     <!-- wonder -->
 
-    <section class="md:max-w-[1250px] w-full h-[800px] m-auto p-8 shadow-md rounded-lg">
+    <section class="md:max-w-[1250px] w-full md:h-[760px] m-auto p-8 shadow-md rounded-lg">
 
      <div class="flex justify-between">
           <div class="flex justify-between items-center gap-x-3 ">
@@ -198,19 +198,19 @@
 
      <div class="w-full mt-7" id="ctn">
 
-          <div #swiperRef="" class="swiper ndSwiper pt-10 rounded-md px-10">
+          <div #swiperRef="" class="swiper ndSwiper rounded-md px-10">
 
                <div class="swiper-wrapper pb-5">
 
                     <div class="swiper-slide">
                          <div class="relative ">
-                              <img src="../img/second-swiper-3.jpg" class="rounded-xl">
+                              <img src="../img/second-swiper-3.jpg" class="rounded-xl m-auto">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
                               <p>Arsenal</p>
                               <p class="line-through">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                         <div class="flex items-center justify-between mt-4 px-3 text-sm md:text-xl">
                               <p class="text-gray-500">تی شرت</p>
                               <p class="text-green-600">2.000.000 t</p>
                          </div>
@@ -220,11 +220,11 @@
                          <div class="relative ">
                               <img src="../img/second-swiper-1.jpg" class="rounded-xl">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
                               <p>Atlas</p>
                               <p class="line-through">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                         <div class="flex items-center justify-between mt-5 px-3 text-sm md:text-xl">
                               <p class="text-gray-500">تی شرت</p>
                               <p class="text-green-600">2.000.000 t</p>
                          </div>
@@ -234,11 +234,11 @@
                          <div class="relative ">
                               <img src="../img/second-swiper-4.jpg" class="rounded-xl">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
                               <p>Hades</p>
                               <p class="line-through">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                         <div class="flex items-center justify-between mt-5 px-3 text-sm md:text-xl">
                               <p class="text-gray-500">تی شرت</p>
                               <p class="text-green-600">2.000.000 t</p>
                          </div>
@@ -248,11 +248,11 @@
                          <div class="relative ">
                               <img src="../img/second-swiper-2.jpg" class="rounded-xl">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
                               <p>Zeus</p>
                               <p class="line-through">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                         <div class="flex items-center justify-between mt-5 px-3 text-sm md:text-xl">
                               <p class="text-gray-500">تی شرت</p>
                               <p class="text-green-600">2.000.000 t</p>
                          </div>
@@ -262,11 +262,11 @@
                          <div class="relative ">
                               <img src="../img/second-swiper-5.jpg" class="rounded-xl">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
                               <p>Thor</p>
                               <p class="line-through">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                         <div class="flex items-center justify-between mt-5 px-3 text-sm md:text-xl">
                               <p class="text-gray-500">تی شرت</p>
                               <p class="text-green-600">2.000.000 t</p>
                          </div>
@@ -276,11 +276,11 @@
                          <div class="relative ">
                               <img src="../img/second-swiper-6.jpg" class="rounded-xl">
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-5 md:text-2xl">
+                         <div class="flex items-center justify-between mt-5 px-2 text-sm md:text-2xl">
                               <p>Loki</p>
                               <p class="line-through">2.500.000 t</p>
                          </div>
-                         <div class="flex items-center justify-between mt-5 px-6 md:text-xl">
+                         <div class="flex items-center justify-between mt-5 px-3 text-sm md:text-xl">
                               <p class="text-gray-500">تی شرت</p>
                               <p class="text-green-600">2.000.000 t</p>
                          </div>
